[package]
name = "rustoner"
version = "0.1.0"
authors = ["hatellezp <hatellezp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rustoner_shiq"
path = "src/main_shiq.rs"

[[bin]]
name = "tester"
path = "src/test.rs"

# this is the good one
[[bin]]
name = "rustoner_dllite"
path = "src/main_dl_lite.rs"

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"

# for cli interface
structopt = { version = "0.3", features = ["paw"] }
paw = "1.0"
exitcode = "*"
question = "0.2.2"

# for other formats
rusqlite = "*"
quick-xml = { version = "0.22.0", features = ["serialize"] }

# for combinations of higher complexity logics
itertools = "*"

# I'm implementing it again myself, for bound and rank computing
fftw = "*"
num-complex = "0.4.0"
nalgebra = "0.25.3"

# for graphs
petgraph = "0.5.1"
tempfile = "3"

# for benchmarking
[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
