[package]
name = "rustoner"
version = "0.1.0"
authors = ["hatellezp <hatellezp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# this is the good one
[[bin]]
name = "rustoner_dlliter"
path = "src/main_dl_lite.rs"

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"

# for cli interface
structopt = { version = "0.3", features = ["paw"] }
paw = "1.0"
exitcode = "*"
question = "0.2.2"

# for combinations of higher complexity logics
itertools = "*"

# I'm implementing it again myself, for bound and rank computing
fftw = "*"
num-complex = "0.4.0"
nalgebra = "0.25.3"

# for graphs
petgraph = "0.5.1"
tempfile = "3"

# for benchmarking
[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
