[package]
name = "rustoner"
version = "0.1.0"
authors = ["hatellezp <hatellezp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# entry point for the rustoner reasoner for the logic dl_lite_r
[[bin]]
name = "rustoner_dlliter"
path = "src/main_dl_lite.rs"

# I'm using for benches purpopses

[[bin]]
name = "bench_bound_finding"
path = "src/bench_bound_finding.rs"

[[bin]]
name = "bench_ontology_related"
path = "src/bench_ontology_related.rs"

# for useless stuff
# [[bin]]
# name = "scracth"
# path = "src/scratch.rs"


[dependencies]

# json parsing, feature not used for the moment
serde = { version = "*", features = ["derive"] }
serde_json = "*"

# I'm doing concurrency now
rayon = "1"

# make the functions using float generics
num-traits = "0.2"

# for cli interface
structopt = { version = "0.3", features = ["paw"] }
paw = "1.0"
exitcode = "*"
question = "0.2.2"
pad = "0.1.6"

# for combinations of higher complexity logics, unused feature
itertools = "*"

# ranking computation, requires linear algebra operations and interpolation, we are
# usign the Fast Fourier Transform to do interpolation
fftw = "*"
fftw-src = "*"
num-complex = "0.4.0"
nalgebra = "0.25.3"
roots = "0.0.7"

# also for benchmarking
regex = "*"

# graph (visual images) generation
petgraph = "0.5.1"
tempfile = "3"

# apparently we must import rand, not part of std...
rand = "*"
rand_distr = "*"

# for benchmarking
[dev-dependencies]
criterion = "0.3"


[[bench]]
name = "benchmark"
harness = false
